--- a/layout/partial/layout.pug
+++ b/layout/partial/layout.pug
@@ -2,11 +2,12 @@ doctype
 html(lang=config.language)
     head
         include head
+
     body
         .wrap
             header
                 a.logo-link(href=url_for())
-                    img(src=url_for(theme.logo) alt="logo")
+                    img(src=url_for(theme.logo), alt="logo")
                 include nav
             main.container
                 block container
