--- a/source/scss/_partial/archive-post-list.scss
+++ b/source/scss/_partial/archive-post-list.scss
@@ -1,16 +1,14 @@
 .archive {
-    max-width: 500px;
+    max-width: 700px;
     margin: 5em auto;
     .post-item {
-        padding: 2px 0 0 50px;
+        padding: 5px 0 0 50px;
     }
     .post-time,
     .post-title-link {
         font-size: 1rem;
     }
     .post-title-link {
-        display: block;
-        margin-left: 125px;
         color: #42b983;
         word-break: break-all;
         &:hover {
@@ -20,7 +18,10 @@
     }
     .post-info {
         float: left;
-        width: 125px;
+        width: 50%;
         color: #7f8c8d;
+        .post-word {
+            display: none;
+        }
     }
 }
