--- a/source/scss/_partial/base.scss
+++ b/source/scss/_partial/base.scss
@@ -12,9 +12,9 @@ body {
     margin: 0;
     color: #34495e;
     font-size: 15px;
-    line-height: 1.6;
+    line-height: 1.7;
     background-color: #fff;
-    font-family: 'sourcesanspro', 'Helvetica Neue', Arial, sans-serif;
+    font-family: 'Microsoft YaHei', 'Helvetica Neue', Arial, sans-serif;
 }
 
 ul.nav,
